# shifter-pandas

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prospector.yaml  .whitesource  .wikidata-cache.json  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yaml  publish.yaml  renovate.json5  spell-ignore-words.txt
.github/workflows/: audit.yaml  changelog.yaml  dependabot-auto-merge.yaml  main.yaml
ci/: config.yaml  requirements.txt
shifter_pandas/: __init__.py  bp.py  ofs.py  wikidata_.py  worldbank.py
tests/: bp-stats-review-2021-all-data.xlsx  gdp-world-regions-stacked-area.csv  population-since-1800.csv  test_bp.py  test_get_region.py  test_ofs.py  test_wikidata.py  test_worldbank.py
