[tool.poetry]
name = "shifter-pandas"
version = "0.0.0"
description = "Convert some data into Panda DataFrames"
readme = "README.md"
authors = ["Stéphane Brunner <stephane.brunner@gmail.com>"]
homepage = "https://hub.docker.com/r/sbrunner/shifter-pandas/"
repository = "https://github.com/sbrunner/shifter-pandas"
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
keywords = ["shifter", "pandas"]
packages = [{ include = "shifter_pandas" }, { include = "shifter_pandas/py.typed" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
requests = "2.32.3"
pandas = "2.2.3"
openpyxl = "3.1.5"
wikidata = "0.8.1"
toml = "0.10.2"
certifi = "2024.8.30"
urllib3 = "2.2.3"
idna = "3.10"

[tool.poetry.dev-dependencies]
prospector = { version = "1.13.3", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
pytest = "8.3.4"
coverage = "7.6.8"
types-toml = "0.10.8.20240310"
types-requests = "2.32.0.20241016"

[tool.poetry.group.dev.dependencies]
prospector-profile-duplicated = "1.8.0"
prospector-profile-utils = "1.13.0"


[tool.ruff]
target-version = "py313"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-plugin-tweak-dependencies-version", "poetry-dynamic-versioning", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""
